--- a/static/test.html
+++ b/static/test.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-        li:nth-child(4){
-            color: red;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+    *{
+      margin: 0;padding: 0;
+    }
+    .warp{
+      display: flex;
+    }
+    .red{
+      background: red;
+      width: 200px;
+    }
+    .blue{
+      background: blue;
+      flex-grow: 1;
+    }
+  </style>
 </head>
+
 <body>
-    <ul>
-        <li>111</li>
-        <p>22222</p>
-        <li>33333</li>
-        <li>4444</li>
-        <p>
-            <li>55555</li>
-            <li>66666</li>
-        </p>
-    </ul>
+  <div class="warp">
+      <div class="red">1</div>
+      <div class="blue">2</div>
+  </div>
 </body>
+
 </html>
